--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_API_BASE_URL=https://<your-vercel-backend-url>/api
+REACT_APP_API_BASE_URL=https://node-express-5xzv86h5k-manibala-sinhas-projects-273c5a77.vercel.app
 
-REACT_APP_API_BASE_URL=https://your-backend-url.onrender.com
+
+#REACT_APP_API_BASE_URL=https://your-backend-url.onrender.com
