--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-REACT_APP_API_BASE_URL=https://node-express-5xzv86h5k-manibala-sinhas-projects-273c5a77.vercel.app
+#REACT_APP_API_BASE_URL=https://node-express-5xzv86h5k-manibala-sinhas-projects-273c5a77.vercel.app
 
 
-#REACT_APP_API_BASE_URL=https://your-backend-url.onrender.com
+#REACT_APP_API_BASE_URL=https://nodeexpress.onrender.com
+REACT_APP_API_BASE_URL=http://localhost:3001
+
